# pyterminal

./: LICENCE  README.md  pyproject.toml
src/pyterminal/: pyterminal.py
src/pyterminal.egg-info/: PKG-INFO  SOURCES.txt
