[project]
name = "pyterminal"
version = "0.0.1"
authors = [
    { name = "SamuGallo-06", email = "samu.gallicani@gmail.com" },
]
description = "Give color to terminal output and more..."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/SamuGallo-06/pyterminal"
Issues = "https://github.com/SamuGallo-06/pyterminal/issues"